# myai

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml
gpt2_jax/: utils.py
gpt2_numpy/: modeling.py  modeling_np.py  utils.py
reprod/gpt2_jax/: README.md  config.py  generate.py  main.py  model.py  sample.py  utils.py
reprod/gpt2_numpy/: config.py  sample.py  utils.py
