[project]
name = "reprod"
version = "0.1.2"
description = "Reproduce important work in machine learning"
readme = "README.md"
requires-python ="~=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Yadong Wen", email = "yadongwen+reprod@gmail.com"},
]
keywords = ["machine-learning", "deep-learning"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
